Add function format time

--- a/src/components/layout/Hero/Hero.scss
+++ b/src/components/layout/Hero/Hero.scss
@@ -43,11 +43,17 @@
   object-fit: cover;
 }
 
-.happyHour {
+.happyHour, .daysToSummer {
   z-index: 999;
   position: absolute;
-  bottom: 20px;
   left: 0;
   right: 0;
 }
 
+.happyHour {
+  bottom: 20px;
+}
+
+.daysToSummer {
+  top: 20px;
+}
